@@ -275,6 +275,9 @@ Tib-only=Tiberium Only
 [map-gen-preset-description]
 Tib-only=A preset to disable autoplace of non-Tiberium resources.  Make sure to also enable "Tiberium Ore Only" under "Mod Settings"
 
+[tiberium-strings]
+tiberium-informatron-reminder=If you are new to Factorio and Conquer: Tiberian Dawn, we recommend downloading the mod "Informatron" which includes a wiki that explains many of our mechanics and systems.
+
 [Factorio-Tiberium]
 menu_Factorio-Tiberium=Factorio and Conquer
 title_Factorio-Tiberium=Factorio and Conquer
